test/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
out/test/spec/block.wast:306: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:310: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:314: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:318: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/block.wast:323: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:329: assert_invalid passed:
  error: type mismatch in block, expected [] but got [i64]
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:335: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f32]
  000001f: error: OnEndExpr callback failed
out/test/spec/block.wast:341: assert_invalid passed:
  error: type mismatch in block, expected [] but got [f64]
  0000023: error: OnEndExpr callback failed
out/test/spec/block.wast:348: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:354: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:360: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:366: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/block.wast:373: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001e: error: OnEndExpr callback failed
out/test/spec/block.wast:382: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001e: error: OnEndExpr callback failed
out/test/spec/block.wast:391: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:401: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:407: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:413: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:419: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/block.wast:426: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:432: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:438: assert_invalid passed:
  error: type mismatch in block, expected [i32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:444: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:450: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:456: assert_invalid passed:
  error: type mismatch in block, expected [i64] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:462: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:468: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:474: assert_invalid passed:
  error: type mismatch in block, expected [f32] but got [f64]
  0000024: error: OnEndExpr callback failed
out/test/spec/block.wast:480: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i32]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:486: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [i64]
  000001d: error: OnEndExpr callback failed
out/test/spec/block.wast:492: assert_invalid passed:
  error: type mismatch in block, expected [f64] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/block.wast:499: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:505: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:511: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:517: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:523: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:529: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:535: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:541: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:547: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got [f64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:553: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:559: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:565: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got [f32]
  0000020: error: EndFunctionBody callback failed
out/test/spec/block.wast:572: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:578: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:584: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:590: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:597: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:603: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:609: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:615: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/block.wast:622: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:628: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:634: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:640: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:647: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:653: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:659: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:665: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:671: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:677: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:683: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:689: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:695: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:701: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:707: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:713: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:720: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:726: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:732: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:738: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/block.wast:745: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:751: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:757: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:763: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:769: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:775: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:781: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:787: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:793: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000025: error: OnBrExpr callback failed
out/test/spec/block.wast:799: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:805: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:811: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000021: error: OnBrExpr callback failed
out/test/spec/block.wast:818: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:824: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i64]
  0000024: error: EndFunctionBody callback failed
out/test/spec/block.wast:830: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f32]
  0000027: error: EndFunctionBody callback failed
out/test/spec/block.wast:836: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f64]
  000002b: error: EndFunctionBody callback failed
out/test/spec/block.wast:843: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:849: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:855: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:861: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/block.wast:868: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:874: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:880: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:886: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/block.wast:893: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:901: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:909: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:917: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:925: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:933: assert_invalid passed:
  error: type mismatch in br, expected [i64] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:941: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:949: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:957: assert_invalid passed:
  error: type mismatch in br, expected [f32] but got [f64]
  0000027: error: OnBrExpr callback failed
out/test/spec/block.wast:965: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i32]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:973: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/block.wast:981: assert_invalid passed:
  error: type mismatch in br, expected [f64] but got [f32]
  0000023: error: OnBrExpr callback failed
out/test/spec/block.wast:990: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:996: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1002: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1008: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001e: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1015: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1021: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1027: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1033: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  000001f: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1040: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1046: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1052: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1058: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1064: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1070: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1076: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1082: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1088: assert_invalid passed:
  error: type mismatch in f64.floor, expected [f64] but got []
  0000027: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1094: assert_invalid passed:
  error: type mismatch in i32.ctz, expected [i32] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1100: assert_invalid passed:
  error: type mismatch in i64.ctz, expected [i64] but got []
  0000020: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1106: assert_invalid passed:
  error: type mismatch in f32.floor, expected [f32] but got []
  0000023: error: OnUnaryExpr callback failed
out/test/spec/block.wast:1114: assert_malformed passed:
  out/test/spec/block/block.128.wat:1:17: error: unexpected label "$l"
  (func block end $l)
                  ^^
out/test/spec/block.wast:1118: assert_malformed passed:
  out/test/spec/block/block.129.wat:1:20: error: mismatching label "$a" != "$l"
  (func block $a end $l)
                     ^^
170/170 tests passed.
;;; STDOUT ;;)
